gccida/c2/record_reg_classes
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1896:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *modes, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1892:7: error: conflicting types for 'record_reg_classes'
void  record_reg_classes( 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:883:13: note: previous declaration is here
static void record_reg_classes  PARAMS ((int, int, rtx *, enum machine_mode *,
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1905:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v11; // rbx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1911:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v17; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1916:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v22; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1917:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v23; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1946:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v52; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1948:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v54; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1950:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v56; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1954:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v60; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1957:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v63; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1961:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v67; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1964:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v70; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1968:1: error: must use 'enum' tag to refer to type 'op_type'
op_type v74; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:1975:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v81; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:2041:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode[2]; // [rsp+60h] [rbp-DC8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:2044:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v150; // [rsp+78h] [rbp-DB0h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:2089:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v91 = recog_data_0.operand[v90 / 4]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/regclass.c:2172:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v13 = recog_data_0.operand[v7]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/record_reg_classes/src/obj/regclass.o] Error 1
